--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,5 @@
 body {
-  @apply font-normal font-body min-h-screen bg-base-300;
+  @apply font-normal font-body min-h-screen bg-base-300 text-base;
 }
 
 h1,
@@ -8,6 +8,6 @@ h3,
 h4,
 h5,
 h6,
-.header {
+.heading {
   @apply font-titles;
 }
